--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,15 +29,16 @@ services:
     container_name: fitness-tracker-backend
     restart: unless-stopped
     environment:
-      MONGO_URI: mongodb://mongodb:27017/Fitness-11-DB # Still connects to container's internal port 27017
-      PORT: 5000
-      JWT_SECRET: your_super_secret_jwt_key_change_this_in_production
-      NODE_ENV: production
+      MONGO_URI: ${MONGO_URI:-mongodb://mongodb:27017/Fitness-11-DB}
+      PORT: ${PORT:-5000}
+      JWT_SECRET: ${JWT_SECRET:-your_super_secret_jwt_key_change_this_in_production}
+      NODE_ENV: ${NODE_ENV:-production}
     ports:
       - "5000:5000"
     depends_on:
       mongodb:
         condition: service_healthy
+        required: false # Make MongoDB optional for cloud deployments
     networks:
       - fitness-network
     healthcheck:
